--- a/ClientGUI/ClientGUI.csproj
+++ b/ClientGUI/ClientGUI.csproj
@@ -109,6 +109,12 @@
     <Compile Include="Registration.xaml.cs">
       <DependentUpon>Registration.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SearchService.xaml.cs">
+      <DependentUpon>SearchService.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TestService.xaml.cs">
+      <DependentUpon>TestService.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Token.cs" />
     <Page Include="AvailableServices.xaml">
       <SubType>Designer</SubType>
@@ -135,6 +141,14 @@
       <SubType>Code</SubType>
     </Compile>
     <Page Include="Registration.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="SearchService.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TestService.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
